--- a/script/install
+++ b/script/install
@@ -4,7 +4,7 @@
 
 set -e
 
-cd "$(dirname $0)"/..
+cd "$(dirname "$0")"/..
 
-# find the installers and run them iteratively
-find . -name install.sh | while read installer ; do sh -c "${installer}" ; done
+# Find the installers and run them iteratively.
+find . -name install.sh | while read -r installer ; do sh -c "${installer}" ; done
