--- a/script/install
+++ b/script/install
@@ -7,4 +7,4 @@ set -e
 cd "$(dirname "$0")"/..
 
 # Find the installers and run them iteratively.
-find . -name install.sh | while read -r installer ; do sh -c "${installer}" ; done
+find . -name install.sh | while read -r installer ; do echo "> ${installer}" && sh -c "${installer}" ; done
